# virtualagc

./: .gitignore  .htaccess  .project  .travis.yml  1003186-MD2-alt.html  1003186-MD2.html  1003458-MD1.html  1003459-MD2.html  1003469-011-MD1.html  1003524-MD1.html  1003540-MD1.html  1003563-031.html  1003563-051.html  1003564-021.html  1003565-011.html  1003565-031.html  1003565-041.html  1003570-011.html  1003570-021.html  1003700-011.html  1003700-051.html  1003700-071.html  1003706-031.html  1003707-031.html  1014999-000.html  1014999-011.html  1014999-021.html  1014999-031.html  1014999-041.html  1014999-051.html  1014999-061.html  1014999-071.html  1014999-081.html  1014999-091.html  1014999-101.html  1014999-111.html  1014999-121.html  2003100-021.html  2003100-061.html  2003100-071.html  (+317 more)
Tools/: CMakeLists.txt  Makefile  bdiffhead.c  binsource2bin.c  binsourcer.py  check_buggers.py  check_sb.py  checkdec.c  create_issues.py  extract_sb.py  find_diffs.py  listing2binsource.c  listing_analyser.py  logsections.py  mapperBlock1.c  oct2bin.c  pagecounter.py  ropediff.py  traceDSKY.py  update_headers.py  utils.c  utils.h  webb2burkey-rope.c
Tools/Proofer/: ProoferBox.py  README.md
Tools/ProoferComments/: ProoferComments.py  README.md  agcChars.txt  compare3.sh  ronOctopus.sh  ronProof.sh
Tools/ProoferSuper/: ProoferSuper.py  octal.burst.exp0.box  octals  testPage1.txt
Tools/boxAGC/: Makefile  boxAGC.c  imageUtilities.c  imageUtilities.h
Tools/disassemblerAGC/: Comanche055-autogenerated.matches  Comanche055-autogenerated.patterns  Comanche055-autogenerated.specs  Comanche055.specs  Comanche067_aborted_reconstruction_20221005.patterns  Comanche067_aborted_reconstruction_20221005.specs  Mike2Lst.py  README.md  auxiliary.py  auxiliaryBLK2.py  auxiliaryBlockI.py  blk1_hard_to_vagc.py  checkForReferences.py  checkForReferencesBLK2.py  checkForReferencesBlockI.py  disassembleBasic.py  disassembleBasicBlockI.py  disassembleInterpretive.py  disassembleInterpretiveBLK2.py  disassembleInterpretiveBlockI.py  disassembleInterpretiveBlockICompleat.py  disassemblerAGC.py  dispatcherBlockI.py  engineering.py  parseCommandLine.py  pieceworkAGC.py  playingWithListsBlockI.py  readCoreRope.py  registers.py  registersBlockI.py  searchFunctions.py  searchSpecial.py  searchSpecialBlockI.py  semulate.py  specifyAGC.py  unMike.py  workflow.sh
Tools/ocr/: correct_box_from_binsource.py  frequent_words_list  octals  octopus.py  words_list
jWiz/: CMakeLists.txt  Makefile  jWiz.cpp  jWiz.h
trunk/yaDSKY/: configure.in
yaAGC/: Backtrace.c  CMakeLists.txt  DecodeDigitalDownlink.c  DecodeDigitalDownlinkHardcodes.c  EmbeddedDemo.c  Makefile  Makefile.Win32  NormalizeSourceName.c  NullAPI.c  SocketAPI.c  WinAGC.c  agc_cli.c  agc_cli.h  agc_debug.h  agc_debugger.c  agc_debugger.h  agc_disassembler.c  agc_disassembler.h  agc_engine.c  agc_engine.h  agc_engine_init.c  agc_gdbmi.c  agc_gdbmi.h  agc_help.c  agc_help.h  agc_simulator.c  agc_simulator.h  agc_symtab.c  agc_symtab.h  agc_utilities.c  core  crt.s  ddd-77772-LM.tsv  ddd-77772-LM131R1.tsv  ddd-77772-LUM69R2.tsv  ddd-77772-Luminary099.tsv  ddd-77772-Luminary163.tsv  ddd-77772-Luminary178.tsv  ddd-77772-Luminary210.tsv  ddd-77772-Zerlina56.tsv  (+88 more)
yaAGC/DebugModeScripts/: AD.PAT  ADS.PAT  AUG.PAT  AUG.PAT.DEL  BZF.PAT  CS.PAT  DCA.PAT.DEL  DCOM.PAT  DCS.PAT  DDOUBL.PAT  DDOUBL.PAT.DEL  DIM.PAT.DEL  DIV.PAT.DEL  DOUBLE.PAT.DEL  DTCF.PAT.DEL  DXCH.PAT  EDRUPT.PAT  INCR.PAT.DEL  INDEX.PAT.DEL  INHINT.PAT.DEL  MASK.PAT.DEL  MP.PAT.DEL  NOOPerasable.PAT.DEL  RELINT.PAT.DEL  ROR.PAT  RXOR.PAT.DEL  SU.PAT.DEL  TCF.PAT  TS.PAT  WOR.PAT  WRITE.PAT.DEL  XCH.PAT  XCH.PAT.DEL  XLQ.PAT  XLQ.PAT.DEL  ZL.PAT.DEL
yaAGS/: Backtrace.c  CMakeLists.txt  DebuggerHookAGS.c  Makefile  aea_engine.c  aea_engine.h  aea_engine_init.c  mainAGS.c  nbfgets.c  symbol_table.c  yaAEA.h
yaDSKY/src/: Backtrace.c  CM.ini  LM.ini  LM0.ini  LM1.ini  Makefile  Makefile.Win32  Makefile.all-archs  Makefile.am  callbacks.c  callbacks.h  interface.c  main.c  support.c
yaDSKY2/: Apollo11-landing.canned  Apollo11-launch.canned  Apollo8-launch.canned  CM.ini  CMakeLists.txt  LM.ini  LM0.ini  LM1.ini  Makefile  testLights.canned  yaDSKY2.cpp  yaDSKY2.h  yaDSKY2.wxg  yaDSKY2.wxg.save
yaLVDC/: CMakeLists.txt  Makefile  MemoryLoadAndDataDisplayPanel.py  MemoryLoadAndDataDisplayPanel_support.py  NOD.txt  PAST.listing  PAST.lvdc  PAST.src  PAST.tsv  PROC9.listing  PROC9.lvdc  PROC9.src  PROC9.sym  PROC9.tsv  ProcessorDisplayPanel.py  ProcessorDisplayPanel_support.py  Test procedure Figure 7-11.ods  Test procedure Figure 7-7.ods  Test procedure Figure 7-8.ods  Test procedure Figure 7-9.ods  analyzeBoost.py  dcsDefinitions.py  debug.c  gdbInterface.c  gdbinit  lvdcTelemetryDecoder.c  lvdcTelemetryDecoder.h  lvdcTelemetryDecoder.py  lvdcTelemetryDefinitions.tsv  parseCommandLineArguments.c  processCIO.c  processInterrupts.c  processInterruptsAndIO.c  processPIO.c  processPRS.c  pushErrorMessage.c  readAssemblies.c  readWriteCore.c  runOneInstruction.c  runSimPTC.sh  (+7 more)
yaOBC/: CMakeLists.txt  Makefile  enetHost  enetHost.c  yaOBC  yaOBC.c
yaTelemetry/: .gitignore  CMakeLists.txt  Makefile  aclocal.m4  config.status  configure.in  yaTelemetry.cpp  yaTelemetry.glade  yaTelemetry.h  yaTelemetry.wxg
yaUniverse/: CMakeLists.txt  Callisto.txt  Ephemeris-Callisto-Apollo8.txt  Ephemeris-Jupiter-Test.txt  Ephemeris-Rhea-Apollo8.txt  Makefile  Moon.txt  Rhea.txt  Uranus.txt
yaUplinkBlock1/: CMakeLists.txt  Makefile  yaUplinkBlock1.c
yaYUL/: CMakeLists.txt  GetOctOrDec.c  IncPc.c  Makefile  Makefile.Win32  Parse2CADR.c  Parse2DEC.c  Parse2FCADR.c  ParseBANK.c  ParseBBCON.c  ParseBLOCK.c  ParseCADR.c  ParseCHECKequals.c  ParseEBANK.c  ParseEBANKEquals.c  ParseECADR.c  ParseEQUALS.c  ParseERASE.c  ParseEqMinus.c  ParseEqualsECADR.c  ParseGENADR.c  ParseGeneral.c  ParseINDEX.c  ParseInterpretiveOperand.c  ParseOCT.c  ParseSBANKEquals.c  ParseSETLOC.c  ParseST.c  ParseXCADR.c  Pass.c  PseudoToSegmented.c  SymbolPass.c  SymbolTable.c  Utilities.c  strcmpEBCDIC.c  test.agc  yaYUL.c  yaYUL.h  yul2agc.c
(+23283 files in other folders)
